Fix content spacing

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,8 @@ body {
   display: inline-block;
   width: 100%;
   align-items: center;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 a {
@@ -61,6 +62,7 @@ img {
   flex-wrap: wrap;
   width: 100%;
   padding-bottom: 2rem;
+  padding-top: 1rem;
 }
 
 p {
